Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52076

Segmentation fault - MapPolygon

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.7.1
    • 5.5.0, 5.6.0
    • Location
    • None
    • I071a58e202345bc71da583995f7245361f00e8c4

    Description

      This or similar SIGSEGV occurs when polygon has two identical vertexes.

      Program received signal SIGSEGV, Segmentation fault.
      0x00007fffd9d96ad8 in p2t::Triangle::EdgeIndex (this=0x0, p1=0x1c7e2e0, p2=0x1cd6d10)
          at /home/kuba/Qt/5.6/Src/qtlocation/src/3rdparty/poly2tri/common/shapes.cpp:167
      167	  if (points_[0] == p1) {
      #0  0x00007fffd9d96ad8 in p2t::Triangle::EdgeIndex (this=0x0, p1=0x1c7e2e0, p2=0x1cd6d10)
          at /home/kuba/Qt/5.6/Src/qtlocation/src/3rdparty/poly2tri/common/shapes.cpp:167
      #1  0x00007fffd9d933d8 in p2t::Sweep::IsEdgeSideOfTriangle (this=0x1cd5920, triangle=..., ep=..., eq=...)
          at /home/kuba/Qt/5.6/Src/qtlocation/src/3rdparty/poly2tri/sweep/sweep.cpp:165
      #2  0x00007fffd9d930f3 in p2t::Sweep::EdgeEvent (this=0x1cd5920, tcx=..., ep=..., eq=..., triangle=0x0, point=...)
          at /home/kuba/Qt/5.6/Src/qtlocation/src/3rdparty/poly2tri/sweep/sweep.cpp:110
      #3  0x00007fffd9d931b5 in p2t::Sweep::EdgeEvent (this=0x1cd5920, tcx=..., ep=..., eq=..., triangle=0x0, point=...)
          at /home/kuba/Qt/5.6/Src/qtlocation/src/3rdparty/poly2tri/sweep/sweep.cpp:123
      #4  0x00007fffd9d931b5 in p2t::Sweep::EdgeEvent (this=0x1cd5920, tcx=..., ep=..., eq=..., triangle=0x1cdd700, point=...)
          at /home/kuba/Qt/5.6/Src/qtlocation/src/3rdparty/poly2tri/sweep/sweep.cpp:123
      #5  0x00007fffd9d930a7 in p2t::Sweep::EdgeEvent (this=0x1cd5920, tcx=..., edge=0x1cf9a60, node=0x1ca5c40)
          at /home/kuba/Qt/5.6/Src/qtlocation/src/3rdparty/poly2tri/sweep/sweep.cpp:105
      #6  0x00007fffd9d92e82 in p2t::Sweep::SweepPoints (this=0x1cd5920, tcx=...)
          at /home/kuba/Qt/5.6/Src/qtlocation/src/3rdparty/poly2tri/sweep/sweep.cpp:57
      #7  0x00007fffd9d92d90 in p2t::Sweep::Triangulate (this=0x1cd5920, tcx=...)
          at /home/kuba/Qt/5.6/Src/qtlocation/src/3rdparty/poly2tri/sweep/sweep.cpp:46
      #8  0x00007fffd9d92960 in p2t::CDT::Triangulate (this=0x1cd03b0)
          at /home/kuba/Qt/5.6/Src/qtlocation/src/3rdparty/poly2tri/sweep/cdt.cpp:52
      #9  0x00007fffd9d5ba4c in QGeoMapPolygonGeometry::updateScreenPoints (this=0x1cdb870, map=...)
          at /home/kuba/Qt/5.6/Src/qtlocation/src/imports/location/qdeclarativepolygonmapitem.cpp:287
      #10 0x00007fffd9d5c9bb in QDeclarativePolygonMapItem::updatePolish (this=0x1cdb7e0)
          at /home/kuba/Qt/5.6/Src/qtlocation/src/imports/location/qdeclarativepolygonmapitem.cpp:531
      #11 0x00007ffff70cbb48 in QQuickWindowPrivate::polishItems() () from /home/kuba/Qt/5.6/gcc_64/lib/libQt5Quick.so.5
      #12 0x00007ffff709806e in ?? () from /home/kuba/Qt/5.6/gcc_64/lib/libQt5Quick.so.5
      #13 0x00007ffff7099271 in ?? () from /home/kuba/Qt/5.6/gcc_64/lib/libQt5Quick.so.5
      #14 0x00007ffff5a34d2a in QCoreApplication::notify(QObject*, QEvent*) () from /home/kuba/Qt/5.6/gcc_64/lib/libQt5Core.so.5
      #15 0x00007ffff5a34e80 in QCoreApplication::notifyInternal2(QObject*, QEvent*) ()
         from /home/kuba/Qt/5.6/gcc_64/lib/libQt5Core.so.5
      #16 0x00007ffff5a8333e in QTimerInfoList::activateTimers() () from /home/kuba/Qt/5.6/gcc_64/lib/libQt5Core.so.5
      #17 0x00007ffff5a83841 in ?? () from /home/kuba/Qt/5.6/gcc_64/lib/libQt5Core.so.5
      #18 0x00007ffff0d47ff7 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #19 0x00007ffff0d48250 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #20 0x00007ffff0d482fc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #21 0x00007ffff5a844e7 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
         from /home/kuba/Qt/5.6/gcc_64/lib/libQt5Core.so.5
      #22 0x00007ffff5a32efa in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) ()
         from /home/kuba/Qt/5.6/gcc_64/lib/libQt5Core.so.5
      #23 0x00007ffff5a3ad9d in QCoreApplication::exec() () from /home/kuba/Qt/5.6/gcc_64/lib/libQt5Core.so.5
      

      Attachments

        1. main.qml
          2 kB
        2. movie.ogv
          232 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paangele Paolo Angelelli
            jzrebiec jzrebiec
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes