src/3rdparty/3rdparty.pro
@@ -1,2 +1,4 @@
 TEMPLATE = subdirs
 SUBDIRS += poly2tri
+SUBDIRS += clipper
+SUBDIRS += clip2tri
