src/3rdparty/poly2tri/poly2tri.pro
@@ -11,6 +11,14 @@ contains(QT_CONFIG, c++11): CONFIG += c++11
     QMAKE_CXXFLAGS += -O3 -ftree-vectorize -ffast-math -funsafe-math-optimizations -Wno-error=return-type
 }
 
+HEADERS +=  poly2tri.h \
+            common/shapes.h \
+            common/utils.h \
+            sweep/advancing_front.h \
+            sweep/cdt.h \
+            sweep/sweep.h \
+            sweep/sweep_context.h
+
 SOURCES += common/shapes.cpp \
            sweep/sweep_context.cpp \
            sweep/cdt.cpp \
